--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@heroicons/react": "^2.2.0",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.18.0",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
