--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@heroicons/react": "^2.2.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.18.0",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
