--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prisma": "^6.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3",
     "react-syntax-highlighter": "^15.6.1",
     "zod": "^3.24.1"
   },
