--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "openapi-types": "^12.1.3",
     "prisma": "^6.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
