--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "check-password-strength": "^3.0.0",
     "framer-motion": "^11.18.0",
+    "monaco-editor": "^0.52.2",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
