--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "check-password-strength": "^3.0.0",
     "framer-motion": "^11.18.0",
     "monaco-editor": "^0.52.2",
-    "next": "15.1.4",
+    "next": "^15.2.0-canary.26",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "openapi-types": "^12.1.3",
