feat(db): add Prisma PostgreSQL adapter with connection pooling
Upgrade to Prisma v7 with PostgreSQL adapter for production database
handling. Fix Next.js 15 async parameters compatibility in API routes.
Remove build-time TypeScript/ESLint ignores and improve type safety
across components.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 DATABASE_URL="postgresql://username:password@localhost:5432/just_api_doc"
 NEXTAUTH_SECRET="your-secret-key"
+NEXTAUTH_URL="http://localhost:3000"
+NODE_ENV="production"
+PRISMA_CLIENT_ENGINE_TYPE="binary"
