--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@heroicons/react": "^2.2.0",
+    "@libsql/client": "^0.17.0",
     "@monaco-editor/react": "^4.6.0",
-    "@prisma/client": "^6.2.1",
-    "@types/react-syntax-highlighter": "^15.5.13",
+    "@prisma/adapter-libsql": "^7.3.0",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "check-password-strength": "^3.0.0",
@@ -25,7 +27,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "openapi-types": "^12.1.3",
-    "prisma": "^6.2.1",
+    "prisma": "^7.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
@@ -38,8 +40,10 @@
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
