--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^11.18.0",
     "monaco-editor": "^0.52.2",
-    "next": "^15.2.0-canary.26",
+    "next": "15.6.0-canary.60",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "openapi-types": "^12.1.3",
